--- a/package.json
+++ b/package.json
@@ -22,16 +22,21 @@
     "browserify": "^13.0.1",
     "del": "^2.2.0",
     "express": "^4.13.4",
+    "font-awesome": "^4.6.3",
     "gulp": "^3.9.1",
     "gulp-autoprefixer": "^3.1.0",
     "gulp-concat": "^2.6.0",
+    "gulp-data": "^1.2.1",
     "gulp-gh-pages": "^0.5.4",
     "gulp-if": "^2.0.1",
     "gulp-image-resize": "^0.8.0",
+    "gulp-jade": "^1.1.0",
     "gulp-jshint": "^2.0.1",
     "gulp-livereload": "^3.8.1",
     "gulp-newer": "^1.1.0",
     "gulp-open": "^2.0.0",
+    "gulp-pug": "^3.0.2",
+    "gulp-responsive": "^2.3.0",
     "gulp-sass": "^2.3.1",
     "gulp-sourcemaps": "^1.6.0",
     "gulp-uglify": "^1.5.3",
