--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "gulp-sourcemaps": "^1.6.0",
     "gulp-uglify": "^1.5.3",
     "gulp-util": "^3.0.7",
+    "js-cookie": "^2.1.2",
     "jshint": "^2.9.2",
     "jshint-stylish": "^2.2.0",
     "p5-bbox-aligned-text": "^1.2.1",
