--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "homepage": "https://github.com/mikewesthad/mikewesthad.github.io#readme",
   "devDependencies": {
+    "beepbeep": "^1.2.1",
     "bootstrap": "^3.3.7",
     "bootstrap-sass": "^3.3.7",
     "browserify": "^14.3.0",
@@ -28,13 +29,13 @@
     "gulp-concat": "^2.6.1",
     "gulp-data": "^1.2.1",
     "gulp-deploy-git": "^0.5.3",
+    "gulp-eslint": "^3.0.1",
     "gulp-if": "^2.0.2",
     "gulp-image-resize": "^0.12.0",
-    "gulp-jade": "^1.1.0",
-    "gulp-jshint": "^2.0.4",
     "gulp-livereload": "^3.8.1",
     "gulp-newer": "^1.3.0",
     "gulp-open": "^2.0.0",
+    "gulp-plumber": "^1.1.0",
     "gulp-pug": "^3.3.0",
     "gulp-responsive": "^2.7.0",
     "gulp-sass": "^3.1.0",
@@ -42,8 +43,6 @@
     "gulp-uglify": "^2.1.2",
     "gulp-util": "^3.0.8",
     "js-cookie": "^2.1.4",
-    "jshint": "^2.9.4",
-    "jshint-stylish": "^2.2.1",
     "p5-bbox-aligned-text": "^1.3.0",
     "run-sequence": "^1.2.2",
     "velocity-animate": "^1.5.0",
