--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "gulp-uglify": "^2.1.2",
     "gulp-util": "^3.0.8",
     "js-cookie": "^2.1.4",
+    "ngrok": "^2.2.9",
     "p5-bbox-aligned-text": "^1.3.0",
     "run-sequence": "^1.2.2",
     "velocity-animate": "^1.5.0",
