--- a/package.json
+++ b/package.json
@@ -4,7 +4,10 @@
   "description": "Portfolio website: [mikewesthad.com](http://mikewesthad.com)",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "prettier": "prettier --write \"./src/**/*.js\""
+  },
+  "prettier": {
+    "printWidth": 100
   },
   "repository": {
     "type": "git",
@@ -49,5 +52,8 @@
     "velocity-animate": "^1.5.0",
     "vinyl-buffer": "^1.0.0",
     "vinyl-source-stream": "^1.1.0"
+  },
+  "dependencies": {
+    "prettier": "^1.11.1"
   }
 }
