--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Portfolio website: [mikewesthad.com](http://mikewesthad.com)",
   "main": "index.js",
   "scripts": {
-    "prettier": "prettier --write \"./src/**/*.js\""
+    "prettier": "prettier --write \"./src/js/!(libs)/**/*.js\""
   },
   "prettier": {
     "printWidth": 100
