--- a/package.json
+++ b/package.json
@@ -28,7 +28,6 @@
     "bootstrap-sass": "^3.3.7",
     "browserify": "^14.5.0",
     "del": "^2.2.2",
-    "express": "^4.16.3",
     "font-awesome": "^4.7.0",
     "gulp": "^3.9.1",
     "gulp-autoprefixer": "^5.0.0",
@@ -37,9 +36,7 @@
     "gulp-eslint": "^5.0.0",
     "gulp-if": "^2.0.2",
     "gulp-image-resize": "^0.13.0",
-    "gulp-livereload": "^3.8.1",
     "gulp-newer": "^1.4.0",
-    "gulp-open": "^3.0.1",
     "gulp-plumber": "^1.2.0",
     "gulp-pug": "^4.0.1",
     "gulp-responsive": "^2.11.0",
@@ -56,6 +53,7 @@
     "vinyl-source-stream": "^2.0.0"
   },
   "dependencies": {
+    "browser-sync": "^2.24.5",
     "gh-pages": "^1.2.0",
     "node-fetch": "^2.1.2",
     "prettier": "^1.13.7"
